<menu

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:popupTheme="@style/Widget.Material3.PopupMenu.Overflow"
    tools:ignore="AlwaysShowAction">

<item
        android:id="@+id/action_run"
        android:icon="@drawable/ic_run"
        android:title="@string/action_run"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_do"
        android:icon="@drawable/ic_undo"
        android:title="@string/action_reundo"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_format"
        android:icon="@drawable/ic_format_1"
        android:title="@string/menu_format_code"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_libs"
        android:icon="@drawable/ic_download"
        android:title="@string/menu_libs"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_search"
        android:checkable="true"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search"
        app:showAsAction="never" />

</menu>
